Update personal description and footer name

--- a/index.html
+++ b/index.html
@@ -124,16 +124,20 @@
 			<div class="about-profile">
 				<div class="text-profile">
 					<p>
-						I am a software engineer, ui/ux designer, product planner, mentor,
-						student, minimalist, eternal optimist, crypto enthusiast and sarcasm
-						connoisseur.
+						Étudiant en 1ère année de BUT MMI, je me forme au développement web
+						avec une approche axée sur la structure et la logique. Je prends
+						plaisir à transformer des maquettes en interfaces réelles en
+						utilisant HTML5, CSS3 et le PHP procédural, tout en veillant à
+						produire un code propre et accessible dès mes premières lignes.
 					</p>
 					<br />
 					<p>
-						I love to both build and break things. I am motivated by challenging
-						projects with self-guided research and dynamic problem solving. My
-						true passion is crafting creative front end designs with unique
-						takes on color, typography and motion.
+						En complément du code, je pratique la photographie, une passion qui
+						aiguise mon sens de la composition et de la couleur. Cette double
+						compétence me permet d'aborder la création numérique avec un regard
+						global, où la rigueur technique du développement rencontre
+						l'exigence esthétique de l'image pour offrir une expérience
+						utilisateur cohérente.
 					</p>
 					<br />
 					<br />
@@ -150,9 +154,14 @@
 			<h2 class="scroll"><i class="fa-solid fa-book"></i> SKILLS</h2>
 			<section class="title-skills">
 				<h3>
-					I have built products ranging from marketing and ecommerce websites to
-					complex enterprise apps with focus on delivering fast, elegant code
-					along with delightful user interfaces.
+					En développement, je conçois des interfaces avec HTML5 et CSS3, en
+					veillant à la structure et au responsive. J'intègre également du PHP
+					procédural pour dynamiser mes pages, tout en appliquant les bases de
+					la sécurité comme htmlspecialchars() pour contrer les failles XSS.
+					Côté image, ma pratique de la photographie m'apporte un œil affûté
+					pour la composition et la colorimétrie. Cette sensibilité me permet de
+					créer des visuels cohérents et des assets optimisés, alliant ainsi
+					technique web et esthétique visuelle.
 				</h3>
 			</section>
 
@@ -495,7 +504,7 @@
 
 		<footer class="footer">
 			<p class="footer-title">
-				© 2024 Created by <span class="nom">Basheer El Kurdi</span>
+				© 2024 Created by <span class="nom">GAUCHER Titouan</span>
 				<span class="p-span">|</span> All rights reserved
 			</p>
 			<div class="ss-icons">
