--- a/index.html
+++ b/index.html
@@ -124,20 +124,16 @@
 			<div class="about-profile">
 				<div class="text-profile">
 					<p>
-						Étudiant en 1ère année de BUT MMI, je me forme au développement web
-						avec une approche axée sur la structure et la logique. Je prends
-						plaisir à transformer des maquettes en interfaces réelles en
-						utilisant HTML5, CSS3 et le PHP procédural, tout en veillant à
-						produire un code propre et accessible dès mes premières lignes.
+						Étudiant en BUT MMI, je conçois des interfaces web avec HTML5, CSS3
+						et PHP. Je m'attache à produire un code propre et structuré, en
+						transformant chaque maquette en une expérience fonctionnelle.
 					</p>
 					<br />
 					<p>
-						En complément du code, je pratique la photographie, une passion qui
-						aiguise mon sens de la composition et de la couleur. Cette double
-						compétence me permet d'aborder la création numérique avec un regard
-						global, où la rigueur technique du développement rencontre
-						l'exigence esthétique de l'image pour offrir une expérience
-						utilisateur cohérente.
+						Passionné de photographie, j'apporte un soin particulier à la
+						composition et à l'esthétique visuelle. Cette double approche me
+						permet d'allier rigueur technique et sensibilité artistique dans
+						tous mes projets numériques.
 					</p>
 					<br />
 					<br />
@@ -154,14 +150,12 @@
 			<h2 class="scroll"><i class="fa-solid fa-book"></i> SKILLS</h2>
 			<section class="title-skills">
 				<h3>
-					En développement, je conçois des interfaces avec HTML5 et CSS3, en
-					veillant à la structure et au responsive. J'intègre également du PHP
-					procédural pour dynamiser mes pages, tout en appliquant les bases de
-					la sécurité comme htmlspecialchars() pour contrer les failles XSS.
-					Côté image, ma pratique de la photographie m'apporte un œil affûté
-					pour la composition et la colorimétrie. Cette sensibilité me permet de
-					créer des visuels cohérents et des assets optimisés, alliant ainsi
-					technique web et esthétique visuelle.
+					Côté code, je maîtrise les bases du web (HTML5/CSS3) et je dynamise
+					mes pages en PHP procédural et JavaScript, tout en veillant à la
+					sécurité (XSS) et à la structure. Côté image, ma pratique de la
+					photographie m'apporte un œil affûté pour la composition et la
+					colorimétrie, me permettant de créer des visuels web optimisés et
+					esthétiques.
 				</h3>
 			</section>
 
