--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 						width="300"
 						height="430"
 						style="border-radius: 12px"
-						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.77845048119!2d2.264462564445498!3d48.8589383126065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis!5e0!3m2!1sfr!2sfr!4v1714475971927!5m2!1sfr!2sfr"
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26794.28593749092!2d4.055534977380537!3d48.292421463726306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ee9857e787b7b1%3A0x57dd125566e84f75!2s10000%20Troyes!5e1!3m2!1sfr!2sfr!4v1771401657102!5m2!1sfr!2sfr"
 						allowfullscreen=""
 						loading="lazy"
 						referrerpolicy="no-referrer-when-downgrade">
@@ -498,7 +498,7 @@
 
 		<footer class="footer">
 			<p class="footer-title">
-				© 2024 Created by <span class="nom">GAUCHER Titouan</span>
+				© 2026 Created by <span class="nom">GAUCHER Titouan</span>
 				<span class="p-span">|</span> All rights reserved
 			</p>
 			<div class="ss-icons">
