--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 			<!--Content before waves-->
 			<div class="inner-header flex">
 				<div class="main scroll">
-					<h2>Welcome to my portfolio<br /><span>GAUCHER Titouan</span></h2>
+					<h2>Bienvenue sur mon portfolio<br /><span>GAUCHER Titouan</span></h2>
 					<h3>Web developer - junior</h3>
 					<!-- Your specialty-->
 					<button onclick="window.location.href = '#profile'" class="main-btn">
-						Who i am ?
+						Qui suis-je ?
 					</button>
 
 					<!--Icons social media / github / profiles-->
