Update SVG fill colors in index.html

--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
 							xlink:href="#gentle-wave"
 							x="48"
 							y="0"
-							fill="rgb(18, 14, 14)" />
+							fill="rgb(14, 14, 14)" />
 						<use
 							xlink:href="#gentle-wave"
 							x="48"
 							y="3"
-							fill="rgb(18, 116, 91)" />
+							fill="rgba(91, 82, 153, 0.6)" />
 						<use
 							xlink:href="#gentle-wave"
 							x="48"
 							y="5"
-							fill="rgba(255,255,255,0.3)" />
+							fill="rgba(130, 121, 188, 0.3)" />
 					</g>
 				</svg>
 			</div>
