--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
 					>
 					<!-- YOUR CV PDF -->
 				</div>
-				<div id="img"><img src="images/man.png" alt="That's me" /></div>
+				<div id="img">
+					<img src="images/photo_profil.png" alt="That's me" />
+				</div>
 				<!--== Your photo ==-->
 			</div>
 
