--- a/index.html
+++ b/index.html
@@ -137,8 +137,11 @@
 					</p>
 					<br />
 					<br />
-					<a class="cv_button" href="Titouan_Gaucher_CV.pdf" target="_blank"
-						>My CV</a
+					<a
+						class="cv_button"
+						href="images/Titouan_Gaucher_CV.pdf"
+						target="_blank"
+						>Mon CV</a
 					>
 					<!-- YOUR CV PDF -->
 				</div>
