Update CSS file paths to include 'css/' prefix

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <!-- ── STYLES CSS ──────────────────────────────────────────── -->
   <!-- Chaque fichier CSS a un rôle précis -->
-  <link rel="stylesheet" href="styles.css" />       <!-- Styles principaux -->
-  <link rel="stylesheet" href="responsive.css" />   <!-- Adaptations mobile/tablette -->
-  <link rel="stylesheet" href="scroll.css" />       <!-- Animations au défilement + bouton haut -->
+  <link rel="stylesheet" href="css/styles.css" />       <!-- Styles principaux -->
+  <link rel="stylesheet" href="css/responsive.css" />   <!-- Adaptations mobile/tablette -->
+  <link rel="stylesheet" href="css/scroll.css" />       <!-- Animations au défilement + bouton haut -->
 
   <!-- Bibliothèque d'icônes Font Awesome (via CDN = hébergée sur internet) -->
   <link rel="stylesheet"
