--- a/index.html
+++ b/index.html
@@ -480,13 +480,13 @@
             <!-- Email — href="mailto:..." ouvre le client mail -->
             <a class="contact-ligne" href="mailto:ton.email@exemple.fr">
               <i class="fa-solid fa-envelope"></i>
-              ton.email@exemple.fr
+              titouan.gaucher22@gmail.com
             </a>
 
             <!-- Téléphone — href="tel:..." lance l'appel sur mobile -->
             <a class="contact-ligne" href="tel:+33600000000">
               <i class="fa-solid fa-phone"></i>
-              +33 6 XX XX XX XX
+              +33 6 58 45 94 26
             </a>
 
             <!-- LinkedIn — target="_blank" = ouvre dans un nouvel onglet -->
